Changelog
=========

5.0-dev - (unreleased)
----------------------
* Feature: Made p4a.video dependency optional
  [voineali refs #5497]
* Change: Refactoring valentine.imagescales to eea.depiction
  [voineali refs #5497]

4.3 - (2012-08-27)
------------------
* Bug fix: added type profile for Topic, fixes tests in Plone 4.2
  [tiberich #5346]

4.2 - (2012-07-13)
------------------
* Feature: Updated PIL dependency with Pillow
  [voineali]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-18)
------------------
* Bug fix: added views registered for default image thumbnail sizes;
  allows plone filters to properly retrieve the image from html text links [tiberich #4651]
* Feature: added a interface mapping fallback for our simile exhibit daviz product.
  [demarant]
* Bug fix: fixed a bug with atfield adapter not properly dealing with broken
  blobs [tiberich]
* Bug fix: fixed a bug with the traverser being triggered for atct_image_transform
 [tiberich]
* Bug fix: Plone4 compatibility
  [tiberich]
* Bug fix: Fixed pylint/pyflakes warrnings
  [ghicaale]
* Change: Restructured package to work with
  plone.app.imaging instead of overriding it
  [tiberich #4284]
* Change: return the whole image when it's not possible to return
  a scale in imgview for folders and fields
  [tiberich #4374]
* Feature: Added upgrade steps
  [voineali #4392]
* Feature: Plone 4.x compatible release
  [tiberich #4284]

0.11 - (2011-10-07)
-------------------
 * Feature: added a interface mapping fallback for our simile exhibit daviz product.
   [demarant]

0.10 - (2011-05-25)
-------------------
 * Bug fix: added workaround for a traversing bug [tiberich EEA #4363]

0.9 - (2011-05-13)
------------------
 * Bug fix: fixed scale for folder, in order to get first Image [ghicaale EEA #4347]

0.8 - (2011-05-03)
------------------
 * Bug fix: replaced call to getFolderContents with direct search in catalog [tiberich]

0.7 - (2011-03-28)
------------------