@@ -6,17 +6,18 @@ ATTopic integration
     >>> browser = Browser()
 
     >>> self.setRoles(['Manager'])
-    >>> topic=portal[portal.invokeFactory('Topic', id='testtopic', title='Title')]
+    >>> from Products.CMFCore.utils import getToolByName
+    >>> portal_types = getToolByName(portal, 'portal_types')
+    >>> topic_type = getattr(portal_types, 'Topic')
+    >>> topic_type.filter_content_types = False
+    >>> topic_type.global_allow = True
+
+    >>> topic=portal[portal.invokeFactory('Topic', id='testtopic')]
     >>> portal.portal_workflow.doActionFor(topic, 'publish')
 
 ATTopics should have a working ImageView adapter that takes the first image
 inside it. By default, you're not allowed to add images inside ATTopics, so
 we enable that temporarily.
-
-    >>> from Products.CMFCore.utils import getToolByName
-    >>> portal_types = getToolByName(topic, 'portal_types')
-    >>> topic_type = getattr(portal_types, topic.portal_type)
-    >>> topic_type.filter_content_types = False
 
     >>> from Products.ATContentTypes.interface import IATTopic
     >>> IATTopic.providedBy(topic)
@@ -28,4 +29,3 @@ Now we can upload our image:
     >>> browser.open('http://localhost/plone/testtopic/image_thumb')
     >>> "PNG" in browser.contents
     True
-
