@@ -1,63 +1,70 @@
 <configure xmlns="http://namespaces.zope.org/zope"
-           xmlns:browser="http://namespaces.zope.org/browser"
-           i18n_domain="eea">
+  xmlns:browser="http://namespaces.zope.org/browser"
+  i18n_domain="eea">
 
-    <include file="atfield.zcml" />
-    <include file="atfolder.zcml" />
-    <include file="attopic.zcml" />
-    <include file="multimedia.zcml" />
+  <include file="atfield.zcml" />
+  <include file="atfolder.zcml" />
+  <include file="attopic.zcml" />
+  <include file="multimedia.zcml" />
 
-    <browser:resourceDirectory name="valentine-imagescales-images"
-                               directory="images"
-                               permission="zope.Public" />
+  <!-- BBB -->
+  <browser:resourceDirectory
+    name="valentine-imagescales-images"
+    directory="images"
+    permission="zope.Public" />
 
-   <browser:page
-       for="Products.Archetypes.interfaces.IBaseObject"
-       name="image_large"
-       class=".default.ImageLarge"
-       permission="zope.Public"
-       />
+  <browser:resourceDirectory
+    name="eea.depiction.images"
+    directory="images"
+    permission="zope.Public" />
 
-   <browser:page
-       for="Products.Archetypes.interfaces.IBaseObject"
-       name="image_preview"
-       class=".default.ImagePreview"
-       permission="zope.Public"
-       />
+  <browser:page
+    for="Products.Archetypes.interfaces.IBaseObject"
+    name="image_large"
+    class=".default.ImageLarge"
+    permission="zope.Public"
+    />
 
-   <browser:page
-       for="Products.Archetypes.interfaces.IBaseObject"
-       name="image_mini"
-       class=".default.ImageMini"
-       permission="zope.Public"
-       />
+  <browser:page
+    for="Products.Archetypes.interfaces.IBaseObject"
+    name="image_preview"
+    class=".default.ImagePreview"
+    permission="zope.Public"
+    />
 
-   <browser:page
-       for="Products.Archetypes.interfaces.IBaseObject"
-       name="image_tile"
-       class=".default.ImageTile"
-       permission="zope.Public"
-       />
+  <browser:page
+    for="Products.Archetypes.interfaces.IBaseObject"
+    name="image_mini"
+    class=".default.ImageMini"
+    permission="zope.Public"
+    />
 
-   <browser:page
-       for="Products.Archetypes.interfaces.IBaseObject"
-       name="image_thumb"
-       class=".default.ImageThumb"
-       permission="zope.Public"
-       />
+  <browser:page
+    for="Products.Archetypes.interfaces.IBaseObject"
+    name="image_tile"
+    class=".default.ImageTile"
+    permission="zope.Public"
+    />
 
-   <browser:page
-       for="Products.Archetypes.interfaces.IBaseObject"
-       name="image_icon"
-       class=".default.ImageIcon"
-       permission="zope.Public"
-       />
+  <browser:page
+    for="Products.Archetypes.interfaces.IBaseObject"
+    name="image_thumb"
+    class=".default.ImageThumb"
+    permission="zope.Public"
+    />
 
-   <browser:page
-       for="Products.Archetypes.interfaces.IBaseObject"
-       name="image_listing"
-       class=".default.ImageListing"
-       permission="zope.Public"
-       />
+  <browser:page
+    for="Products.Archetypes.interfaces.IBaseObject"
+    name="image_icon"
+    class=".default.ImageIcon"
+    permission="zope.Public"
+    />
+
+  <browser:page
+    for="Products.Archetypes.interfaces.IBaseObject"
+    name="image_listing"
+    class=".default.ImageListing"
+    permission="zope.Public"
+    />
 
 </configure>
