@@ -1,0 +1,4 @@
+""" Config
+"""
+PROJECTNAME = 'eea.depiction'
+ADD_CONTENT_PERMISSION = "Add portal content"
