@@ -1,0 +1,8 @@
+<configure xmlns="http://namespaces.zope.org/zope"
+  xmlns:browser="http://namespaces.zope.org/browser"
+  i18n_domain="eea">
+
+  <browser:resource name="eea.depiction.gif"
+    file="tool.gif" />
+
+</configure>
