@@ -1,0 +1,7 @@
+""" Depiction content interfaces
+"""
+from zope.interface import Interface
+
+class IDepictionTool(Interface):
+    """ Local utility to store and customize content-types generic thumbnails
+    """
