@@ -1,0 +1,7 @@
+""" Public Depiction Interfaces
+"""
+from eea.depiction.content.interfaces import IDepictionTool
+
+__all__ = (
+    IDepictionTool.__name__,
+)
