@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<componentregistry>
+ <utilities>
+  <utility
+   interface="eea.depiction.interfaces.IDepictionTool"
+   object="portal_depiction"/>
+ </utilities>
+</componentregistry>
