@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<object name="portal_controlpanel" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <configlet i18n:domain="eea" title="Depiction Library" action_id="portal_depiction"
+  appId="EEADepiction" category="Products" condition_expr=""
+  icon_expr="string:$portal_url/++resource++eea.depiction.gif"
+  url_expr="string:${portal_url}/portal_depiction/"
+  visible="True" i18n:attributes="title">
+ <permission>Manage portal</permission>
+ </configlet>
+</object>
