@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <metadata>
  <description>EEA Depiction</description>
- <version>4.0</version>
+ <version>5.0</version>
 </metadata>
