@@ -1,7 +1,6 @@
 <?xml version="1.0"?>
-<object name="portal_properties" meta_type="Plone Properties Tool">
- <object name="imaging_properties" meta_type="Plone Property Sheet">
-  <property name="title">Image handling properties</property>
+<object name="portal_properties">
+ <object name="imaging_properties">
   <property name="allowed_sizes" type="lines">
 
    <!--Added wide size -->
@@ -15,8 +14,22 @@
    <element value="tile 64:64"/>
    <element value="icon 32:32"/>
    <element value="listing 16:16"/>
-
   </property>
  </object>
-</object>
 
+ <object name="navtree_properties">
+  <property name="metaTypesNotToList" type="lines" purge="False">
+   <element value="DepictionTool"/>
+  </property>
+ </object>
+
+ <object name="site_properties">
+  <property name="use_folder_contents" type="lines" purge="False">
+   <element value="DepictionTool"/>
+  </property>
+  <property name="types_not_searched" type="lines" purge="False">
+   <element value="DepictionTool"/>
+  </property>
+ </object>
+
+</object>
