@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<tool-setup>
+ <required tool_id="portal_depiction"
+  class="eea.depiction.content.tool.DepictionTool" />
+</tool-setup>
