@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<object name="portal_types" meta_type="Plone Types Tool">
- <object name="Topic"
-    meta_type="Factory-based Type Information with dynamic views"/>
+<object name="portal_types">
+  <object name="DepictionTool"
+    meta_type="Factory-based Type Information" />
 </object>
