@@ -1,0 +1,28 @@
+<?xml version="1.0"?>
+<object name="DepictionTool" meta_type="Factory-based Type Information"
+   xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <property name="title">EEA Depiction Tool</property>
+ <property
+    name="description">Define fallback thumbnails for content-types</property>
+ <property name="content_icon">++resource++eea.depiction.gif</property>
+ <property name="content_meta_type">DepictionTool</property>
+ <property name="product">eea.depiction</property>
+ <property name="factory">addDepictionTool</property>
+ <property name="immediate_view">folder_summary_view</property>
+ <property name="global_allow">False</property>
+ <property name="filter_content_types">True</property>
+ <property name="allowed_content_types">
+  <element value="Image"/>
+ </property>
+ <property name="allow_discussion">False</property>
+ <alias from="(Default)" to="folder_summary_view"/>
+ <alias from="edit" to="base_edit"/>
+ <alias from="index.html" to="(Default)"/>
+ <alias from="properties" to="base_metadata"/>
+ <alias from="view" to="(Default)"/>
+ <action title="View" action_id="view" category="object"
+    condition_expr="python:True" url_expr="string:$object_url/"
+    visible="True">
+  <permission value="View"/>
+ </action>
+</object>
