@@ -1,76 +1,0 @@
-<?xml version="1.0"?>
-<object name="Topic"
-   meta_type="Factory-based Type Information with dynamic views"
-   i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
- <property name="title" i18n:translate="">Collection</property>
- <property name="description"
-    i18n:translate="">An always-updated saved search that can be used to display items matching criteria you specify.</property>
- <property name="icon_expr"></property>
- <property name="content_meta_type">ATTopic</property>
- <property name="product">ATContentTypes</property>
- <property name="factory">addATTopic</property>
- <property name="add_view_expr"></property>
- <property name="link_target"></property>
- <property name="immediate_view">atct_topic_view</property>
- <property name="global_allow">True</property>
- <property name="filter_content_types">True</property>
- <property name="allowed_content_types">
-  <element value="Document"/>
-  <element value="Image"/>
-  <element value="Promotion"/>
-  <element value="Topic"/>
- </property>
- <property name="allow_discussion">False</property>
- <property name="default_view">atct_topic_view</property>
- <property name="view_methods">
-  <element value="subfolder_view"/>
-  <element value="folder_summary_search_view"/>
-  <element value="smart_view"/>
-  <element value="atct_topic_view"/>
-  <element value="cft_listing_view"/>
-  <element value="folder_summary_view"/>
-  <element value="folder_tabular_view"/>
-  <element value="atct_album_view"/>
-  <element value="folder_listing"/>
-  <element value="folder_full_view"/>
-  <element value="map_view"/>
- </property>
- <property name="default_view_fallback">False</property>
- <alias from="(Default)" to="(dynamic view)"/>
- <alias from="edit" to="atct_edit"/>
- <alias from="index.html" to="(dynamic view)"/>
- <alias from="properties" to="base_metadata"/>
- <alias from="sharing" to="@@sharing"/>
- <alias from="view" to="(selected layout)"/>
- <action title="View" action_id="view" category="object" condition_expr=""
-    icon_expr="" link_target="" url_expr="string:${folder_url}/"
-    visible="True">
-  <permission value="View"/>
- </action>
- <action title="Edit" action_id="edit" category="object"
-    condition_expr="not:object/@@plone_lock_info/is_locked_for_current_user|python:True"
-    icon_expr="" link_target="" url_expr="string:${object_url}/edit"
-    visible="True">
-  <permission value="Change portal topics"/>
- </action>
- <action title="Folder Listing" action_id="folderlisting" category="folder"
-    condition_expr="object/isPrincipiaFolderish" icon_expr="" link_target=""
-    url_expr="string:${folder_url}/view" visible="False">
-  <permission value="View"/>
- </action>
- <action title="Criteria" action_id="criteria" category="object"
-    condition_expr="" icon_expr="" link_target=""
-    url_expr="string:${folder_url}/criterion_edit_form" visible="True">
-  <permission value="Change portal topics"/>
- </action>
- <action title="Subfolders" action_id="subtopics" category="object"
-    condition_expr="" icon_expr="" link_target=""
-    url_expr="string:${folder_url}/atct_topic_subtopics" visible="True">
-  <permission value="Change portal topics"/>
- </action>
- <action title="Syndication" action_id="syndication" category="object"
-    condition_expr="" icon_expr="" link_target=""
-    url_expr="string:${folder_url}/synPropertiesForm" visible="False">
-  <permission value="Change portal topics"/>
- </action>
-</object>
