@@ -3,6 +3,26 @@
   xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
   i18n_domain="eea">
 
+  <!-- 4.0 => 5.0 -->
+  <genericsetup:upgradeSteps
+    source="4.0"
+    destination="5.0"
+    profile="eea.depiction:default">
+
+    <genericsetup:upgradeDepends
+      title="Import all steps from eea.depiction profile"
+      import_profile="eea.depiction:default"
+      />
+
+    <genericsetup:upgradeStep
+
+      title="Migrate valentine-imagescales to portal_depiction"
+      handler="eea.depiction.upgrades.evolve50.migrateOldImages"
+      />
+
+  </genericsetup:upgradeSteps>
+
+  <!-- * => 4.0 -->
   <genericsetup:upgradeSteps
     source="*"
     destination="4.0"
